[tool.poetry]
name = "FedJust"
version = "0.1.2.3"
description = ""
authors = ["Scolpe <63779111+Scolpe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "FedJust"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">= 2.2.0"
torchvision = ">= 0.1.5"
datasets = ">= 2.17.0"
numpy = ">= 1.2.6"
scikit-learn = ">= 1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
